Web Inspector: Dashboard arrow icon on the right is overlapped by a long function/file name https://bugs.webkit.org/show_bug.cgi?id=145540
Also, increase clickable area of the arrow icon.

Reviewed by Timothy Hatcher.

* UserInterface/Views/DashboardContainerView.css:
(.dashboard-container .advance-arrow):
(.dashboard-container .advance-arrow.advance-forward):
(.dashboard-container .advance-arrow.advance-backward):
* UserInterface/Views/DebuggerDashboardView.css:
(.dashboard.debugger > .location):
(.toolbar .dashboard.debugger):
Increase padding on the right so the content of the dashboard would be never be overlayed by the arrow.


Canonical link: https://commits.webkit.org/163620@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185135 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/DashboardContainerView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DashboardContainerView.css
@@ -114,10 +114,11 @@
 
 .dashboard-container .advance-arrow {
     position: absolute;
-    right: 0px;
-    width: 10px;
-    height: 10px;
-    margin: 4px;
+    right: 0;
+    width: 12px;
+    top: 0;
+    bottom: 0;
+    padding: 4px 0;
     opacity: 0.6;
 
     z-index: 1000;
@@ -127,6 +128,7 @@
 
     transition-property: opacity;
     transition-duration: 0.2s;
+    background-clip: content-box;
 }
 
 .dashboard-container .advance-arrow:hover {
@@ -151,10 +153,10 @@
 
 .dashboard-container .advance-arrow.advance-forward {
     top: 0;
-    background-position: 0% 0%;
+    background-position: 50% 4px;
 }
 
 .dashboard-container .advance-arrow.advance-backward {
     bottom: 0;
-    background-position: 0% 100%;
+    background-position: 50% -4px;
 }
