--- a/Source/WebInspectorUI/UserInterface/Views/DebuggerDashboardView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DebuggerDashboardView.css
@@ -31,7 +31,7 @@
     text-align: center;
     text-shadow: rgba(255, 255, 255, 0.5) 0 1px 0;
     color: rgb(60, 60, 60);
-    padding: 0 5px;
+    padding: 0 12px 0 5px;
 }
 
 .dashboard.debugger > .message {
@@ -90,6 +90,7 @@
 }
 
 .dashboard.debugger > .location {
+    overflow: hidden;
     flex: initial;
 }
 
